Fixed blank slides in slideshow
Fixed blank slides by truncating the summary to a shorter
value. This has now created a new issue with displacing the
last slide upwards.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5429,10 +5429,9 @@ ul.nice-menu-down li ul li ul {
   text-align: left; }
 
 .summary-image{
-  vertical-align: bottom;
   position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
+  top: 30%;
+  transform: translate(0, -30%);
 }
 
 .fs-row{
